<resources>
    <string name="app_name">EzBill</string>
    <string name="title_my_account_book">My Account Book</string>
    <string name="title_group_account_book">Group Account Book</string>
    <string name="new_expense">New Expense</string>
    <string name="Note">Note</string>
    <string name="enter_note">Enter Note</string>
    <string name="Date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="a">A</string>
    <string name="payer">Payer</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="MORE">\u002B</string>
    <string name="amount">Amount</string>
    <string name="auto_sum">Auto Sum</string>
    <string name="participant">Participant</string>
    <string name="select_participant">Select Participant</string>
    <string name="Text_view">TextView</string>
    <string name="exbill">EzBill</string>
    <string name="new_expense_toolbar">New Expense</string>
    <string name="category">Category</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="my_expense">My Expense</string>
    <string name="total_expense">Total Expense</string>
    <string name="expense">Expense</string>
    <string name="calculate">Calculate</string>
    <string name="bills">Bills</string>
    <string name="view_all_bills">View All Bills</string>
    <string name="income">Income</string>
    <string name="type">Type</string>
    <string name="creator">Creator</string>
    <string name="user_email">Email</string>
    <string name="qr_code">My QR Code</string>
    <string name="profile_photo">Profile Photo</string>
    <!--for sign in and sign up-->
    <string name="signed_out">Signed Out</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
</resources>
