<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/addtransGroup"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/payerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/payer"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/payer"
            android:textSize="25sp" />

        <Spinner
            android:id="@+id/payer_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="select payer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/autosumlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amount"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/amountShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:text="Total Expense"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/button_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/refersh" />

        <!--<EditText-->
        <!--android:id="@+id/autoSumCollect"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:ems="10"-->
        <!--android:gravity="center"-->
        <!--android:hint="@string/enter_amount"-->
        <!--android:inputType="textPersonName"-->
        <!--android:textSize="25sp"/>-->

        <!--<ImageButton-->
        <!--android:id="@+id/group_camera_button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/camera"-->
        <!--android:onClick="cameraScan" />-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/partilayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/participant"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/participant"
            android:textSize="25sp" />

        <Button
            android:id="@+id/selectParticipant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_participant" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listparticipant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>
