<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <include
            android:id="@+id/my_info_toolbar"
            layout="@layout/toolbar" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/line_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_photo"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="20sp"/>
            </LinearLayout>

            <include layout="@layout/line_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="20sp"/>
            </LinearLayout>

            <include layout="@layout/line_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="20sp"/>
            </LinearLayout>

            <include layout="@layout/line_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qr_code"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/qr_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="20sp"/>
            </LinearLayout>

            <include layout="@layout/line_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                >

                <Button
                    android:id="@+id/signOutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text="@string/sign_out"
                    android:onClick="signOutOnClick"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>